# pentra-x

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  StudentSuccessSuite.crypto  config.yaml  cracked.json  hidrax.py  install.sh  npentrax.py  pentrax  pentrax.cpp  pentrax.py  pyproject.toml  requirements.txt  results_wifi_mitm.txt  setup.py
calculator_project/: README.md  calculator.py  requirements.txt
hs/: handshake_AndroidAP_20-64-32-89-73-4F_2025-07-05T15-32-42.cap  handshake_Calvin_6E-94-F7-00-80-34_2025-07-05T20-34-00.cap  handshake_HUAWEIY5p_2A-98-15-FB-B8-98_2025-07-05T22-20-05.cap  handshake_MTN4GB19D4E_98-A9-42-B1-9D-4E_2025-07-05T15-19-32.cap  handshake_Mayas_A6-03-DA-20-65-9B_2025-07-05T20-22-57.cap  handshake_TECNOSPARK9T_96-E9-56-29-28-C2_2025-07-05T22-21-10.cap
pento/: fix_duplicates.py  fix_logos.py  npentrax.py  pentrax.py
pentra-BN/: README.md  bot_client.py  botnet_server.py  botnet_simulation.py  cert.pem  key.pem  migrate_db.py  requirements.txt  setup_postgres.py  start_all.bat  start_all.sh
pentra-BN/instance/: pentra_bn.db
pentra-BN/static/: custom.css  custom.js
pentra-BN/templates/: activation.html  dashboard.html  login.html  register.html
pentra-a/: pentrax.py
pentrax/: __init__.py  __main__.py  cli.py
pentrax/core/: __init__.py  colors.py  config.py  logging.py  spinner.py  utils.py
pentrax/modules/: __init__.py
pentrax/modules/crypto/: __init__.py  file_crypto.py  hash_utils.py  secure_delete.py  zip_crack.py
pentrax/modules/mitm/: __init__.py  arp_spoof.py
tests/: test_imports.py
(+31 files in other folders)
