[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pentrax"
version = "2.0.0"
description = "Advanced Pentesting Toolkit"
authors = [{name = "Prince Ofori"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pycryptodome>=3.19.0",
    "PyYAML>=6.0",
    "requests>=2.31.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

[project.scripts]
pentrax = "pentrax.__main__:main"

[project.optional-dependencies]
full = [
    "scapy",
    "shodan",
    "python-nmap",
]
dev = [
    "pytest",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
